--- a/shims/hdi40/driver/pom.xml
+++ b/shims/hdi40/driver/pom.xml
@@ -15,7 +15,7 @@
   <properties>
     <commons-lang.version>2.6</commons-lang.version>
     <pentaho-osgi-bundles.version>10.3.0.0-SNAPSHOT</pentaho-osgi-bundles.version>
-    <org.apache.avro.version>1.8.2.7.1.4.0-203</org.apache.avro.version>
+    <org.apache.avro.version>1.12.0</org.apache.avro.version>
     <org.apache.orc.version>1.5.1.7.1.4.0-203</org.apache.orc.version>
     <parquet.version>1.10.99.7.1.4.0-203</parquet.version>
     <org.apache.hadoop.version>3.1.1.7.1.4.0-203</org.apache.hadoop.version>
